correct student name,class alignment in noticeboard section

--- a/studentPortal/static/student/css/notice.css
+++ b/studentPortal/static/student/css/notice.css
@@ -24,7 +24,7 @@ h3{
     font-size: 22px;
 }
 
-p{
+p.date{
     text-align: end;
     width:100%;
 }
